@@ -1,3 +1,7 @@
+2025-12-13  Akira Kakuto  <kakuto@jcom.zaq.ne.jp>
+
+	* Makefile.am: sync with the upstream luatex.
+
 2025-12-11  Andreas Scherer  <https://ascherer.github.io>
 
 	* ctangleboot.cin,
